@@ -140,6 +140,7 @@ Cacti CHANGELOG
 -feature#5941: Implement Drag and Drop on Graph Templates Edit Page
 -feature#5942: Improve Speed of Graph Template Editing Through Bulk Updates
 -feature#5948: Allow Graph Template Classes to be changed enmass
+-feature#5952: Create a new form dropdown type called drop_icon
 -feature: Allow messages to be popup notifications
 -feature: Upgrade billboard.js to version 3.14.1
 -feature: Upgrade jQueryUI to 1.14.1
